<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="launcher_heading_text">My Nanodegree Apps!</string>

    <string name="launcher_button_spotify_streamer_text">Spotify Steamer</string>
    <string name="launcher_button_scores_app_text">Scores App</string>
    <string name="launcher_button_library_app_text">Library App</string>
    <string name="launcher_button_build_it_bigger_text">Build It Bigger</string>
    <string name="launcher_button_xyz_reader_text">XYZ Reader</string>
    <string name="launcher_button_capstone_app_text">Capstone: My Own App</string>

    <string name="spotify_streamer_toast_message">This button will launch spotify streamer app</string>
    <string name="scores_app_toast_message">This button will launch scores app</string>
    <string name="library_app_toast_message">This button will launch library app</string>
    <string name="build_it_bigger_toast_message">This button will launch build it bigger app</string>
    <string name="xyz_reader_toast_message">This button will launch xyz reader app</string>
    <string name="capstone_app_toast_message">This button will launch capstone app</string>
</resources>
