<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/launcher_heading"
            style="@style/launcher_heading"
            android:text="@string/launcher_heading_text" />

        <Button
            android:id="@+id/launcher_button_spotify_streamer"
            style="@style/launcher_button"
            android:layout_below="@+id/launcher_heading"
            android:text="@string/launcher_button_spotify_streamer_text" />

        <Button
            android:id="@+id/launcher_button_scores_app"
            style="@style/launcher_button"
            android:layout_below="@+id/launcher_button_spotify_streamer"
            android:text="@string/launcher_button_scores_app_text" />

        <Button
            android:id="@+id/launcher_button_library_app"
            style="@style/launcher_button"
            android:layout_below="@+id/launcher_button_scores_app"
            android:text="@string/launcher_button_library_app_text" />

        <Button
            android:id="@+id/launcher_button_build_it_bigger"
            style="@style/launcher_button"
            android:layout_below="@+id/launcher_button_library_app"
            android:text="@string/launcher_button_build_it_bigger_text" />

        <Button
            android:id="@+id/launcher_button_xyz_reader"
            style="@style/launcher_button"
            android:layout_below="@+id/launcher_button_build_it_bigger"
            android:text="@string/launcher_button_xyz_reader_text" />

        <Button
            android:id="@+id/launcher_button_capstone_app"
            style="@style/dark_launcher_button"
            android:layout_below="@+id/launcher_button_xyz_reader"
            android:text="@string/launcher_button_capstone_app_text" />
    </RelativeLayout>
</ScrollView>